[gd_scene load_steps=8 format=3 uid="uid://c7qcibwenny3n"]

[ext_resource type="Script" uid="uid://xjg6ssxvbqtj" path="res://scenes/skill_contolllers/mana/player/spark_permanent_controller.gd" id="1_iuyic"]
[ext_resource type="PackedScene" uid="uid://b5rac3bn806k0" path="res://scenes/projectiles/spark_projectile.tscn" id="2_4rvrt"]

[sub_resource type="SphereShape3D" id="SphereShape3D_iuyic"]
resource_local_to_scene = true
radius = 10.0

[sub_resource type="Animation" id="Animation_8awob"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SparkProjectile:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SparkProjectile:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_cnomx"]
resource_name = "fire"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SparkProjectile:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(3, 3, 3), Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("SparkProjectile:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}

[sub_resource type="Animation" id="Animation_4rvrt"]
resource_name = "orbit"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28319, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8awob"]
_data = {
&"RESET": SubResource("Animation_8awob"),
&"fire": SubResource("Animation_cnomx"),
&"orbit": SubResource("Animation_4rvrt")
}

[node name="SparkPermanentController" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)
script = ExtResource("1_iuyic")
projectile_packed = ExtResource("2_4rvrt")

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 5120

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_iuyic")

[node name="CastTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="SparkProjectile" parent="." instance=ExtResource("2_4rvrt")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8awob")
}
autoplay = "orbit"

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
[connection signal="timeout" from="CastTimer" to="." method="_on_cast_timer_timeout"]
